[BUGFIX] align text in button

--- a/src/app/component/shared/components/edit-photo-pop-up/edit-photo-pop-up.component.scss
+++ b/src/app/component/shared/components/edit-photo-pop-up/edit-photo-pop-up.component.scss
@@ -13,6 +13,28 @@ $main-font: 'Open Sans';
   margin: 0 auto;
   background: #fff;
 
+  .primary-global-button {
+    background: #fff;
+    color: #13aa57;
+    width: 132px;
+    margin-right: 24px;
+
+    &:hover {
+      border: 1px solid #056b33;
+      color: #056b33;
+    }
+  }
+
+  .secondary-global-button {
+    background: #13aa57;
+    color: #fff;
+    padding: 16px 24px;
+
+    &:hover {
+      background: #056b33;
+    }
+  }
+
   .cancel {
     position: absolute;
     top: 26px;
@@ -77,28 +99,6 @@ $main-font: 'Open Sans';
         outline: none;
       }
 
-      .primary-global-button {
-        background: #fff;
-        color: #13aa57;
-        width: 132px;
-        margin-right: 24px;
-
-        &:hover {
-          border: 1px solid #056b33;
-          color: #056b33;
-        }
-      }
-
-      .secondary-global-button {
-        background: #13aa57;
-        color: #fff;
-        width: 191px;
-
-        &:hover {
-          background: #056b33;
-        }
-      }
-
       button:disabled {
         background: #839c94;
         border: 1px solid #839c94;
@@ -122,26 +122,27 @@ $main-font: 'Open Sans';
   }
 }
 
+@media screen and (max-width: 500px) {
+  .wrapper {
+    p {
+      padding: 24px 15px 40px;
+    }
+
+    .buttons {
+      flex-direction: column;
+
+      .primary-global-button,
+      .secondary-global-button {
+        margin: 0 0 24px;
+        width: 287px;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 320px) {
   .main-container {
     padding-right: 0;
     padding-left: 0;
-
-    .wrapper {
-      p {
-        padding: 24px 15px 40px;
-      }
-
-      .buttons {
-        flex-direction: column;
-        justify-self: start;
-
-        .primary-global-button,
-        .secondary-global-button {
-          margin: 0 0 24px;
-          width: 287px;
-        }
-      }
-    }
   }
 }
